# theSlate

./: .contemporary.json  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Info.plist  README.md  aboutwindow.ui  appveyor.yml  exception.h  exitsavedialog.h  exitsavedialog.ui  icons.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  node-appdmg-config.json  syntaxhighlighter.cpp  syntaxhighlighter.cpp.autosave  syntaxhighlighter.h  syntaxhighlighter.h.autosave  tabbutton.cpp  terminalwidget.cpp  terminalwidget.h  texteditor.cpp  texteditor.h  theSlate.pro  theSlate.pro.autosave  theSlate.pro.user.934b325  travis.sh
AuxiliaryPanes/: AuxiliaryPanes.pro
AuxiliaryPanes/HtmlPreview/: HtmlPreview.pro  htmlpreviewpane.cpp  htmlpreviewpane.h  (+5 more)
Debug/: debugger.cpp  debugger.h  nodejsdebugger.cpp  nodejsdebugger.h
FileBackends/: FileBackends.pro
SourceControl/: gitintegration.cpp  gitintegration.h
SyntaxHighlightingPlugins/: SyntaxHighlightingPlugins.pro  defaultsyntaxhighlighting.cpp  defaultsyntaxhighlighting.h
application/: CMakeLists.txt  com.vicr123.theslate.desktop  com.vicr123.theslate_blueprint.desktop  landingpage.cpp  landingpage.h  landingpage.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  unsavedchangespopover.cpp  unsavedchangespopover.h  unsavedchangespopover.ui
application/pages/abstractpage/: abstractpage.cpp  abstractpage.h
application/pages/editorpage/: editorpage.cpp  editorpage.h  editorpage.ui  textmergepopover.cpp  textmergepopover.h  textmergepopover.ui
application/pages/passthroughpage/: passthroughpage.cpp  passthroughpage.h
application/pages/projectpage/: projectpage.cpp  projectpage.h  projectpage.ui
application/pages/projectpage/buildtasks/: buildtaskprogressitem.cpp  buildtaskprogressitem.h  buildtaskprogressitem.ui  buildtaskscontainer.cpp  buildtaskscontainer.h  buildtaskscontainer.ui
application/pages/projectpage/leftpanes/abstractleftpane/: abstractleftpane.cpp  abstractleftpane.h
application/pages/projectpage/leftpanes/filetreeleftpane/: filetreeleftpane.cpp  filetreeleftpane.h  filetreeleftpane.ui
application/pages/projectpage/leftpanes/gitleftpane/: gitleftpane.cpp  gitleftpane.h  gitleftpane.ui  gitroot.cpp  gitroot.h  gitroot.ui
application/pages/projectpage/leftpanes/runconfigurationleftpane/: runconfigurationbuilditem.cpp  runconfigurationbuilditem.h  runconfigurationbuilditem.ui  runconfigurationleftpane.cpp  runconfigurationleftpane.h  runconfigurationleftpane.ui
application/pages/projectpage/models/: buildjobissuesmodel.cpp  buildjobissuesmodel.h
application/pages/projectpage/pagewidgets/: buildjobpagewidget.cpp  buildjobpagewidget.h  buildjobpagewidget.ui
application/pages/repositoryclonepage/: repositoryclonepage.cpp  repositoryclonepage.h  repositoryclonepage.ui
application/translations/: en_US.ts
application/translations/desktop/com.vicr123.theslate/: en.json
application/translations/desktop/com.vicr123.theslate_blueprint/: en.json
application/widgetholder/: widgetholdereditor.cpp  widgetholdereditor.h  widgetholdereditor.ui  widgetholdereditorfactory.cpp  widgetholdereditorfactory.h
appveyor/: build.bat
libtheslate/: CMakeLists.txt  editormanager.cpp  editormanager.h  libtheslateConfig.cmake.in  libtheslate_global.h  project.cpp  project.h  statemanager.cpp  statemanager.h  theslateplugin.h
libtheslate/editors/abstracteditor/: abstracteditor.cpp  abstracteditor.h  abstracteditorcolorscheme.cpp  abstracteditorcolorscheme.h  abstracteditorfactory.cpp  abstracteditorfactory.h
libtheslate/editors/texteditor/: breakpointrenderstep.cpp  breakpointrenderstep.h  textcaret.cpp  textcaret.h  texteditor.cpp  texteditor.h  texteditor_p.h  texteditorcompletionwidget.cpp  texteditorcompletionwidget.h  texteditorfactory.cpp  texteditorfactory.h  ttexteditoreditor.cpp  ttexteditoreditor.h
libtheslate/editors/texteditor/commands/: careterasecommand.cpp  careterasecommand.h  carettextcommand.cpp  carettextcommand.h  texteditorcommand.cpp  texteditorcommand.h
libtheslate/lsp/: languageserverexception.cpp  languageserverexception.h  languageserverprocess.cpp  languageserverprocess.h
libtheslate/project/: buildengine.cpp  buildengine.h  buildenginemanager.cpp  buildenginemanager.h  buildjob.cpp  buildjob.h  logscanner.cpp  logscanner.h  logscannermanager.cpp  logscannermanager.h  runconfiguration.cpp  runconfiguration.h  runjob.cpp  runjob.h
libtheslate/project/presets/: processrunjob.cpp  processrunjob.h
plugins/: CMakeLists.txt
plugins/CMakePlugin/: CMakeLists.txt  cmakebuildengine.cpp  cmakebuildengine.h  cmakerunconfiguration.cpp  cmakerunconfiguration.h  plugin.cpp
plugins/CMakePlugin/buildjobs/: cmakebuildjob.cpp  cmakebuildjob.h  cmakeconfigurejob.cpp  cmakeconfigurejob.h
plugins/CMakePlugin/fileapiclient/: codemodelobject.cpp  codemodelobject.h  directoryobject.cpp  directoryobject.h  replyindex.cpp  replyindex.h  targetobject.cpp  targetobject.h
plugins/CMakePlugin/translations/: en_US.ts
plugins/ClangPlugin/: CMakeLists.txt  clanglogscanner.cpp  clanglogscanner.h  plugin.cpp  plugin.h
plugins/DotNetPlugin/: CMakeLists.txt  plugin.cpp  plugin.json
plugins/DotNetPlugin/DotNetPluginDotNet/: DotNetPluginDotNet.sln
plugins/DotNetPlugin/DotNetPluginDotNet/DotNetIntegration/: Class1.cs  DotNetIntegration.csproj
slate/: Info.plist  aboutwindow.cpp  aboutwindow.ui  exitsavedialog.cpp  exitsavedialog.h  exitsavedialog.ui  files.qrc  icon-bp.icns  icon.icns  icons.qrc  initialStartupFile  main-objc.mm  main.cpp  mainwindow-objc.mm  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagebox.cpp  messagebox.h  node-appdmg-config.json  picturetabbar.cpp  picturetabbar.h  picturetabbar.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  slate.pro  syntaxhighlighter.cpp  tabbutton.cpp  tabbutton.h  texteditor.cpp  texteditor.h  textwidget.cpp  textwidget.h  textwidget.ui  theslate.desktop
textparts/: findreplace.cpp  findreplace.h  findreplace.ui  mergetool.cpp  mergetool.h  mergetool.ui  topnotification.cpp
translations/: nl_NL.ts  vi_VN.ts
(+220 files in other folders)
